# kb-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
demo/kb/clients/: acme-corp.md
demo/kb/meetings/: 2026-05-15-acme-kickoff.md
demo/kb/tech/: ai-agent-cdp.md
docs/: schema.md
skills/kb-manager/: SKILL.md
skills/kb-manager/agents/: openai.yaml
src/kb_manager/: __init__.py  cli.py  gap.py  index.py  ingest.py  init.py  lint.py  manifest.py  workspace.py
tests/: __init__.py  test_cli.py  test_index_regressions.py
