[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-manager"
version = "0.1.0"
description = "知识库管理框架 — FTS5 全文检索 + 自动入库 + 健康检查"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "tengbin"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Indexing",
]

[project.scripts]
kb = "kb_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
